# TradeMachine

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: docs-compliance.mdc  project-architecture.mdc  python-standards.mdc  strategy-changelog-update.mdc  trading-domain.mdc
app/: main.py
app/config/: constants.py  settings.py  stock_names.py
app/core/: cache.py  database.py  dependencies.py  event_bus.py  exceptions.py  logging_config.py  protocols.py  rate_limiter.py  utils.py
app/model/: domain.py  dto.py
app/repository/: kis_auth_repository.py  market_data_repository.py  order_log_repository.py  order_repository.py  report_repository.py
app/router/: dashboard_router.py  market_router.py  trading_router.py
app/scheduler/: trading_scheduler.py
app/service/: buy_evaluator.py  indicator_service.py  market_guard.py  sell_evaluator.py  trading_service.py
app/static/: dashboard.html
docs/: api-verification.md  data-storage.md  implementation-progress.md  implementation-spec.md  kis-api-reference.md  kis-integration-guide.md  project-plan.md  strategy-changelog.md  system-flow.md  trading-journal.md  trading-strategy.md
tests/: conftest.py
tests/integration/: test_balance_none.py  test_pre_post_market.py  test_recover_state.py  test_run_scan.py  test_sell_failure.py  test_trading_service_buy.py  test_trading_service_sell.py
tests/scenario/: test_full_trading_day.py
tests/unit/: test_cache.py  test_database.py  test_domain.py  test_event_filter.py  test_indicator_service.py  test_market_guard.py  (+6 more)
